league-ad working

--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -197,7 +197,7 @@
     }
   </div>
 </div>
-<div class="matchup-tools-container">
+<!-- <div class="matchup-tools-container">
   @if (view !== "teambuilder") {
     <button class="tool-button" (click)="view = 'teambuilder'">
       <mat-icon>build</mat-icon>
@@ -208,7 +208,7 @@
       <mat-icon>search_insights</mat-icon>
     </button>
   }
-</div>
+</div> -->
 
 <!-- <div class="matchup-tabs-container">
     <div class="radial-stack" [class.open]="toolOpen">
