--- a/src/app/pages/external-link/external-link.component.scss
+++ b/src/app/pages/external-link/external-link.component.scss
@@ -33,18 +33,17 @@
 
   &__icon {
     flex-shrink: 0;
-    width: 3rem;
-    height: 3rem;
     color: pdz-color(warning);
 
-    svg {
-      width: 100%;
-      height: 100%;
+    mat-icon {
+      font-size: 3rem;
+      width: 3rem;
+      height: 3rem;
     }
   }
 
   &__title {
-    @include apply-typography("headline-small");
+    @include apply-typography("headline-medium");
     margin: 0;
     color: pdz-color(on-menu-container);
   }
@@ -100,7 +99,8 @@
     color: pdz-color(error);
     font-weight: 600;
 
-    svg {
+    mat-icon {
+      font-size: 1.25rem;
       width: 1.25rem;
       height: 1.25rem;
     }
@@ -162,7 +162,8 @@
     padding: var(--pdz-space-sm) var(--pdz-space-lg);
     font-weight: 500;
 
-    svg {
+    mat-icon {
+      font-size: 1.25rem;
       width: 1.25rem;
       height: 1.25rem;
     }
@@ -183,34 +184,13 @@
       border: 1px solid pdz-color(primary-border);
 
       &:hover:not(:disabled) {
-        background-color: pdz-color(primary-hover);
+        background-color: pdz-color(primary-hover) !important;
       }
 
       &:disabled {
         opacity: 0.5;
         cursor: not-allowed;
       }
-    }
-  }
-
-  &__footer {
-    display: flex;
-    justify-content: center;
-    padding: var(--pdz-space-md);
-    padding-top: 0;
-  }
-
-  &__home-link {
-    @include apply-typography("body-small");
-    background: none;
-    border: none;
-    color: pdz-color(primary);
-    cursor: pointer;
-    text-decoration: underline;
-    padding: var(--pdz-space-xs);
-
-    &:hover {
-      color: pdz-color(primary-hover);
     }
   }
 }
